# bas-set-cpu-affinity

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  TODO.md  pyproject.toml  set_cpu_affinity_cli.py
bas_set_cpu_affinity/: __init__.py  __main__.py  cli.py  core.py
tests/: README.md  __init__.py  conftest.py
tests/functional/: __init__.py  test_affinity_management.py
tests/unit/: __init__.py  test_cli.py  test_core.py
